--- a/system/xtrs/xtrs.desktop
+++ b/system/xtrs/xtrs.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=XTRS
 Comment=TRS-80 Model I/III/4/4P Emulator
 Categories=System;Emulator;
-Exec=xtrs
+Exec=/usr/games/gxtrs
 Icon=xtrs
 Terminal=false
 StartupNotify=false
